hphp/hack/test/typecheck/suspend_operator_err11.php.exp
File "suspend_operator_err11.php", line 12, characters 12-26:
Coroutine calls are only allowed when they are arguments to 'suspend' operator (Typing[4171])
